compiler/parse_expr.c
#include "parser.h"
#include "lexer.h"
#include "fly.h"

#include <stdlib.h>
#include <assert.h>

/* In parser.c */
extern void syntax_error(parser_t* parser, const char* expected);
extern void print_indent(parser_t* parser);
extern void next_token(parser_t* parser);

typedef enum {
    LEFT,
    RIGHT,
    NONE
} op_assoc_t;

internal op_assoc_t get_operator_associativity(token_tag_t op) {
    switch (op) {
        case TOKEN_T_NOT:
        case TOKEN_T_DEC:
        case TOKEN_T_INC:
            return NONE;
        case TOKEN_T_ASSIGN:
            return RIGHT;
        default:
            /* we assume that only operators get passed in here */
            return LEFT;
    }
}

internal int get_operator_precedence(token_tag_t op) {
    switch (op) {
        case TOKEN_T_ADD:
        case TOKEN_T_SUB:
            return 10;
        case TOKEN_T_MUL:
        case TOKEN_T_DIV:
        case TOKEN_T_MOD:
            return 11;
        case TOKEN_T_SHIFT_LEFT:
        case TOKEN_T_SHIFT_RIGHT:
            return 9;
        case TOKEN_T_BITWISE_AND:
            return 5;
        case TOKEN_T_BITWISE_OR:
            return 4;
        case TOKEN_T_BITWISE_XOR:
            return 3;
        case TOKEN_T_BITWISE_NOT:
            return 12;
        case TOKEN_T_AND:
            return 2;
        case TOKEN_T_OR:
            return 1;
        case TOKEN_T_NOT:
        case TOKEN_T_INC:
        case TOKEN_T_DEC:
            return 12;
        case TOKEN_T_ASSIGN:
        case TOKEN_T_ADD_ASSIGN:
        case TOKEN_T_SUB_ASSIGN:
        case TOKEN_T_MUL_ASSIGN:
        case TOKEN_T_DIV_ASSIGN:
        case TOKEN_T_MOD_ASSIGN:
        case TOKEN_T_BITWISE_AND_ASSIGN:
        case TOKEN_T_BITWISE_OR_ASSIGN:
        case TOKEN_T_BITWISE_XOR_ASSIGN:
        case TOKEN_T_SHIFT_LEFT_ASSIGN:
        case TOKEN_T_SHIFT_RIGHT_ASSIGN:
            return 0;
        case TOKEN_T_EQUAL:
            return 6;
        case TOKEN_T_NOT_EQUAL:
            return 7;
        case TOKEN_T_LESS_EQUAL:
        case TOKEN_T_GREATER_EQUAL:
        case TOKEN_T_LANGLE:
        case TOKEN_T_RANGLE:
            return 8;
        default:
            return -1;
    }
}

typedef struct {
    ast_id ast;
    op_assoc_t assoc;
    int prec;
} operator_t;

typedef enum {
    UNKNOWN = 0,
    INT,
    UINT,
    INTL,
    UINTL,
    CHAR,
    BOOL,
    STRING,
    FLOAT32,
    FLOAT64
} native_type_t;

typedef struct {
    ast_id ast;
    native_type_t type;
} operand_t;

/* ******* Operator stack ********* */
typedef struct {
    operator_t* stack;
    int capacity;
    int top;
} operator_stack_t;

operator_stack_t operator_stack_init() {
    operator_stack_t stack = {
            .stack = NULL,
            .capacity = 0,
            .top = -1
    };
    return stack;
}

bool operator_stack_push(operator_stack_t* stack, operator_t op) {
    assert(stack);
    stack->top++;
    if (stack->top == stack->capacity) {
        stack->capacity += 10;
        operator_t* tmp = realloc(stack->stack, stack->capacity * sizeof(operator_t));
        if (!tmp) {
            stack->top--;
            stack->capacity -= 10;
            return false;
        }
        stack->stack = tmp;
    }
    stack->stack[stack->top] = op;
    return true;
}

operator_t operator_stack_pop(operator_stack_t* stack) {
    assert(stack);
    assert(stack->top > -1);
    return stack->stack[stack->top--];
}

void operator_stack_release(operator_stack_t* stack) {
    assert(stack);
    free(stack->stack);
    stack->capacity = 0;
    stack->top = 0;
}

/* ********** Operand Stack *********** */
typedef struct {
    operand_t* stack;
    int capacity;
    int top;
} operand_stack_t;

operand_stack_t operand_stack_init() {
    operand_stack_t stack = {
            .stack = NULL,
            .capacity = 0,
            .top = -1
    };
    return stack;
}

bool operand_stack_push(operand_stack_t* stack, operand_t op) {
    assert(stack);
    stack->top++;
    if (stack->top == stack->capacity) {
        stack->capacity += 10;
        operand_t* tmp = realloc(stack->stack, stack->capacity * sizeof(operand_t));
        if (!tmp) {
            stack->top--;
            stack->capacity -= 10;
            return false;
        }
        stack->stack = tmp;
    }
    stack->stack[stack->top] = op;
    return true;
}

operand_t operand_stack_pop(operand_stack_t* stack) {
    assert(stack);
    assert(stack->top > -1);
    return stack->stack[stack->top--];
}

void operand_stack_release(operand_stack_t* stack) {
    assert(stack);
    free(stack->stack);
    stack->capacity = 0;
    stack->top = 0;
}

/* Expressions */

internal int is_next_infix_op(parser_t* parser) {
    switch (parser->next.tag) {
        case TOKEN_T_ADD:
        case TOKEN_T_SUB:
        case TOKEN_T_MUL:
        case TOKEN_T_DIV:
        case TOKEN_T_MOD:
        case TOKEN_T_BITWISE_AND:
        case TOKEN_T_BITWISE_OR:
        case TOKEN_T_BITWISE_XOR:
        case TOKEN_T_SHIFT_LEFT:
        case TOKEN_T_SHIFT_RIGHT:
        case TOKEN_T_AND:
        case TOKEN_T_OR:
        case TOKEN_T_EQUAL:
        case TOKEN_T_NOT_EQUAL:
        case TOKEN_T_LESS_EQUAL:
        case TOKEN_T_GREATER_EQUAL:
        case TOKEN_T_LANGLE:
        case TOKEN_T_RANGLE:
            return 1;
        default:
            return 0;
    }
}

internal ast_id parse_infix_operator(parser_t* parser) {
    switch (parser->next.tag) {
        case TOKEN_T_ADD:
        case TOKEN_T_SUB:
        case TOKEN_T_MUL:
        case TOKEN_T_DIV:
        case TOKEN_T_MOD:
        case TOKEN_T_BITWISE_AND:
        case TOKEN_T_BITWISE_OR:
        case TOKEN_T_BITWISE_XOR:
        case TOKEN_T_SHIFT_LEFT:
        case TOKEN_T_SHIFT_RIGHT:
        case TOKEN_T_AND:
        case TOKEN_T_OR:
        /* case TOKEN_T_ASSIGN:
        case TOKEN_T_ADD_ASSIGN:
        case TOKEN_T_SUB_ASSIGN:
        case TOKEN_T_MUL_ASSIGN:
        case TOKEN_T_DIV_ASSIGN:
        case TOKEN_T_MOD_ASSIGN:
        case TOKEN_T_BITWISE_AND_ASSIGN:
        case TOKEN_T_BITWISE_OR_ASSIGN:
        case TOKEN_T_BITWISE_XOR_ASSIGN:
        case TOKEN_T_SHIFT_LEFT_ASSIGN:
        case TOKEN_T_SHIFT_RIGHT_ASSIGN: */
        case TOKEN_T_EQUAL:
        case TOKEN_T_NOT_EQUAL:
        case TOKEN_T_LESS_EQUAL:
        case TOKEN_T_GREATER_EQUAL:
        case TOKEN_T_LANGLE:
        case TOKEN_T_RANGLE:
            next_token(parser);
            return 1; // we need to differentiate between success and failure.
        default:
            syntax_error(parser, "infix operator");
            break;
    }
    return AST_INVALID_ID;
}


internal ast_id parse_const_simple_operand(parser_t* parser);

internal ast_id parse_simple_operand(parser_t* parser) {
    /* simple operands are either constants or ids */
    if (parser->next.tag == TOKEN_T_ID) {
        parse_id(parser);
        return 132;
    } else
        return parse_const_simple_operand(parser);

}

internal ast_id parse_prefix_expr(parser_t* parser) {
    if (parser->next.tag != TOKEN_T_NOT &&
            parser->next.tag != TOKEN_T_INC &&
            parser->next.tag != TOKEN_T_DEC &&
            parser->next.tag != '~') {
        return AST_INVALID_ID;
    }
    next_token(parser);
    print_indent(parser);
    printf("prefix_exp\n");
    parser->debug_indent += 4;
    parse_expr(parser);
    parser->debug_indent -= 4;
    return 1;
}

#define UNUSED(x)((void)x)

internal ast_id parse_infix_expr(parser_t* parser) {
    operand_stack_t operand_stack = operand_stack_init();
    operator_stack_t operator_stack = operator_stack_init();
